dist/1.0/bin/sample/retrieveUnpackaged/objects/saving__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Costs_Agreement__c</referenceTo>
        <relationshipLabel>Savings</relationshipLabel>
        <relationshipName>Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_PLN__c</fullName>
        <label>Amount PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>The Amount of money which can be saved.</inlineHelpText>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Done_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Done_End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_cost__c</fullName>
        <label>Other cost</label>
        <referenceTo>Other_cost__c</referenceTo>
        <relationshipLabel>Savings</relationshipLabel>
        <relationshipName>Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Percent Value?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Rental_Leased_Line__c</fullName>
        <label>Roof Rental / Leased Line</label>
        <referenceTo>RRLL__c</referenceTo>
        <relationshipLabel>Savings</relationshipLabel>
        <relationshipName>Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Saving__c</fullName>
        <label>Type of Saving</label>
        <picklist>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valorisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Saving</label>
    <nameField>
        <label>Saving Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>